[package]
name = "books"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
log = "0.4"
simple_logger = "1.11.0"
serde = { version = "1.0.126", features = ["derive"] }
num = "0.4"
csv = "1.1.6"